Angular new style applied and init directive.

--- a/bower.json
+++ b/bower.json
@@ -46,6 +46,8 @@
     "angular-resource": "~1.2.19",
     "angular-translate": "~2.2.0",
     "html5shiv": "~3.7.2",
-    "respond": "~1.4.2"
+    "respond": "~1.4.2",
+    "angular-bootstrap": "~0.12.0",
+    "angular-toastr": "~0.5.2"
   }
 }
