Small myAge directive example.

--- a/bower.json
+++ b/bower.json
@@ -48,6 +48,7 @@
     "html5shiv": "~3.7.2",
     "respond": "~1.4.2",
     "angular-bootstrap": "~0.12.0",
-    "angular-toastr": "~0.5.2"
+    "angular-toastr": "~0.5.2",
+    "angular-moment": "~0.8.3"
   }
 }
