--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 /bower_components
 /node_modules
+/.idea/.name
+/.idea/bajsapp.iml
+/.idea/encodings.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/scopes/scope_settings.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
+/app/.idea/.name
+/app/.idea/app.iml
+/app/.idea/encodings.xml
+/app/.idea/misc.xml
+/app/.idea/modules.xml
+/app/.idea/scopes/scope_settings.xml
+/app/.idea/vcs.xml
+/app/.idea/workspace.xml
