--- a/bower.json
+++ b/bower.json
@@ -49,6 +49,7 @@
     "respond": "~1.4.2",
     "angular-bootstrap": "~0.12.0",
     "angular-toastr": "~0.5.2",
-    "angular-moment": "~0.8.3"
+    "angular-moment": "~0.8.3",
+    "angular-animate": "~1.3.14"
   }
 }
