--- a/bower.json
+++ b/bower.json
@@ -50,6 +50,8 @@
     "angular-bootstrap": "~0.12.0",
     "angular-toastr": "~0.5.2",
     "angular-moment": "~0.8.3",
-    "angular-animate": "~1.3.14"
+    "angular-animate": "~1.3.14",
+    "oclazyload": "~0.5.2",
+    "angular-ui-router": "~0.2.13"
   }
 }
