--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stipter-app",
   "version": "1.2.3",
   "devDependencies": {
+    "chai": "^2.1.2",
     "grunt": "~0.4.5",
     "grunt-bower-install": "^1.6.0",
     "grunt-contrib-concat": "^0.4.0",
@@ -21,11 +22,15 @@
     "karma": "^0.12.16",
     "karma-browserstack-launcher": "^0.1.1",
     "karma-chrome-launcher": "^0.1.4",
+    "karma-coverage": "^0.2.7",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
     "karma-junit-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^0.1.4",
-    "napa": "^0.4.1"
+    "karma-sinon-chai": "^0.3.0",
+    "mocha": "^2.2.1",
+    "napa": "^0.4.1",
+    "sinon": "^1.14.1"
   },
   "dependencies": {
     "angularjs": "0.0.1"
