--- a/bower.json
+++ b/bower.json
@@ -52,6 +52,7 @@
     "angular-moment": "~0.8.3",
     "angular-animate": "~1.3.14",
     "oclazyload": "~0.5.2",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "toastr": "~2.1.1"
   }
 }
