--- a/bower.json
+++ b/bower.json
@@ -48,11 +48,10 @@
     "html5shiv": "~3.7.2",
     "respond": "~1.4.2",
     "angular-bootstrap": "~0.12.0",
-    "angular-toastr": "~0.5.2",
     "angular-moment": "~0.8.3",
     "angular-animate": "~1.3.14",
     "oclazyload": "~0.5.2",
     "angular-ui-router": "~0.2.13",
-    "toastr": "~2.1.1"
+    "angular-toastr": "~1.1.0"
   }
 }
