--- a/bower.json
+++ b/bower.json
@@ -52,6 +52,7 @@
     "angular-animate": "~1.3.14",
     "oclazyload": "~0.5.2",
     "angular-ui-router": "~0.2.13",
-    "angular-toastr": "~1.1.0"
+    "angular-toastr": "~1.1.0",
+    "angular-ui-utils": "bower"
   }
 }
