--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,8 @@
     "jquery-ui": "~1.11.0",
     "angular-cookies": "~1.2.20",
     "angular-translate-loader-url": "~2.2.0",
-    "angular-translate-loader-static-files": "~2.2.0"
+    "angular-translate-loader-static-files": "~2.2.0",
+    "angular-ui-calendar": "latest"
   },
   "devDependencies": {
     "angular": "~1.3.8",
@@ -53,6 +54,7 @@
     "oclazyload": "~0.5.2",
     "angular-ui-router": "~0.2.13",
     "angular-toastr": "~1.1.0",
-    "angular-ui-utils": "bower"
+    "angular-ui-utils": "bower",
+    "angular-ui-calendar": "latest"
   }
 }
