--- a/bower.json
+++ b/bower.json
@@ -56,6 +56,7 @@
     "angular-toastr": "~1.1.0",
     "angular-ui-utils": "bower",
     "angular-ui-calendar": "latest",
-    "angular-dynforms": "~0.0.4"
+    "angular-dynforms": "~0.0.4",
+    "angular-schema-form": "~0.8.0"
   }
 }
