--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-htmlhint": "^0.4.0",
+    "grunt-jscs": "^1.6.0",
     "grunt-karma": "^0.8.3",
     "grunt-ngmin": "0.0.3",
     "grunt-wiredep": "^1.8.0",
+    "jscs": "^1.12.0",
     "karma": "^0.12.16",
     "karma-browserstack-launcher": "^0.1.1",
     "karma-chrome-launcher": "^0.1.4",
