--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "grunt-jscs": "^1.6.0",
     "grunt-karma": "^0.8.3",
     "grunt-ngmin": "0.0.3",
+    "grunt-protractor-coverage": "^0.2.13",
     "grunt-wiredep": "^1.8.0",
+    "http-server": "^0.6.1",
     "jscs": "^1.12.0",
     "karma": "^0.12.16",
     "karma-browserstack-launcher": "^0.1.1",
@@ -31,12 +33,10 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.4",
     "karma-sinon-chai": "^0.3.0",
-    "protractor": "^1.1.1",
-    "http-server": "^0.6.1",
-    "shelljs": "^0.2.6",
-    "karma-junit-reporter": "^0.2.2",
     "mocha": "^2.2.1",
     "napa": "^0.4.1",
+    "protractor": "^1.1.1",
+    "shelljs": "^0.2.6",
     "sinon": "^1.14.1"
   },
   "dependencies": {
@@ -44,20 +44,15 @@
   },
   "scripts": {
     "postinstall": "bower install",
-
     "prestart": "npm install",
     "start": "http-server -a localhost -p 1338 -c-1",
-
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js  --single-run",
-
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
-
     "preprotractor": "npm run update-webdriver",
     "protractor": "protractor tests/e2e/protractor.conf.js",
-
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   }
 }
