--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 - '0.12'
 
 before_install:
-- npm install --quiet
+- npm install --quiet -g grunt
 - npm config registries.github.auth JoDDiz9yYoTiqxwqtcy8
 - bower install
 
