--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.8",
+    "angular": "1.3.8",
     "jquery": "~2.1.1",
     "bootstrap": "~3.2.0",
     "angular-route": "~1.2.19",
@@ -37,11 +37,7 @@
     "angular-cookies": "~1.2.20",
     "angular-translate-loader-url": "~2.2.0",
     "angular-translate-loader-static-files": "~2.2.0",
-    "angular-ui-calendar": "latest"
-  },
-  "devDependencies": {
-    "angular": "~1.3.8",
-    "jquery": "~2.1.1",
+    "angular-ui-calendar": "latest",
     "angular-mocks": "~1.2.19",
     "angular-route": "~1.2.19",
     "angular-resource": "~1.2.19",
