--- a/bower.json
+++ b/bower.json
@@ -25,34 +25,30 @@
   ],
   "dependencies": {
     "angular": "1.3.5",
-    "jquery": "~2.1.1",
-    "bootstrap": "~3.2.0",
-    "angular-route": "~1.2.19",
-    "angular-mocks": "~1.2.19",
-    "angular-resource": "~1.2.20",
-    "angular-local-storage": "~0.0.5",
-    "angular-ui-router": "~0.2.10",
-    "bootstrap-switch": "~3.0.2",
-    "jquery-ui": "~1.11.0",
-    "angular-cookies": "~1.2.20",
-    "angular-translate-loader-url": "~2.2.0",
-    "angular-translate-loader-static-files": "~2.2.0",
-    "angular-ui-calendar": "latest",
-    "angular-mocks": "~1.2.19",
-    "angular-route": "~1.2.19",
-    "angular-resource": "~1.2.19",
-    "angular-translate": "~2.2.0",
-    "html5shiv": "~3.7.2",
-    "respond": "~1.4.2",
-    "angular-bootstrap": "~0.12.0",
-    "angular-moment": "~0.8.3",
     "angular-animate": "~1.3.14",
-    "oclazyload": "~0.5.2",
-    "angular-ui-router": "~0.2.13",
-    "angular-toastr": "~1.1.0",
-    "angular-ui-utils": "bower",
-    "angular-ui-calendar": "latest",
+    "angular-bootstrap": "~0.12.0",
+    "angular-cookies": "~1.2.20",
+    "angular-local-storage": "~0.0.5",
+    "angular-lodash": "~0.1.2",
+    "angular-mocks": "~1.2.19",
+    "angular-moment": "~0.8.3",
+    "angular-resource": "~1.2.19",
+    "angular-route": "~1.2.19",
     "angular-schema-form": "~0.8.0",
-    "angular-lodash": "~0.1.2"
+    "angular-toastr": "~1.1.0",
+    "angular-translate": "~2.2.0",
+    "angular-translate-loader-static-files": "~2.2.0",
+    "angular-translate-loader-url": "~2.2.0",
+    "angular-ui-calendar": "latest",
+    "angular-ui-router": "~0.2.13",
+    "angular-ui-utils": "bower",
+    "bootstrap": "~3.2.0",
+    "bootstrap-switch": "~3.0.2",
+    "html5shiv": "~3.7.2",
+    "jquery": "~2.1.1",
+    "jquery-ui": "~1.11.0",
+    "oclazyload": "~0.5.2",
+    "respond": "~1.4.2",
+    "rxjs": "~4.0.7"
   }
 }
